@@ -1,29 +1,28 @@
 
 This directory contains a few files that sphinx2 can use for
-a task.
+a simple "turtle graphics" or robot directing task.
 
-  demo.corpus   is the original corpus as given to the lmtool web page.
-                see the main website for more info at
+  turtle.corpus  is the original corpus as given to the lmtool web page.
+                 see the main website for more info at
                    
                      http://www.speech.cs.cmu.edu/sphinx/
 
-  demo.dic      the pronunciation dictionary for the task
+  turtle.dic     the pronunciation dictionary for the task
 
-  demo.handdict where you add your own pronuciations (a hand-made
-                dictionary)
+  turtle.handdict where you add your own pronuciations (a hand-made
+                  dictionary)
 
-  demo.lm       the actual ARPABO language model for the task
+  turtle.lm      the actual ARPABO language model for the task
 
-  demo.sent     the sentences as they were actually processed
+  turtle.sent    the sentences as they were actually processed
 
-  demo.sent.arpabo arpabo models of the sentences
+  turtle.sent.arpabo arpabo models of the sentences
 
-  demo.token    token counts for each 'word'
+  turtle.token   token counts for each 'word'
 
-  demo.vocab    the vocabulary of the task
+  turtle.vocab   the vocabulary of the task
 
   goforward.16k a raw, 16-bit 16kHz audio file containing the utterance
                 'go forward ten meters'
 
 Not all of these are needed, but they're all here.
-
