@@ -11,11 +11,13 @@ HMM=@prefix@/share/sphinx2/model/hmm/6k
 TASK=@prefix@/share/sphinx2/model/lm/turtle
 
 # the control file, which lists the utterance names, one per line
-CTLFILE=@prefix@/share/sphinx2/model/lm/turtle/test.ctl
+CTLFILE=@prefix@/share/sphinx2/model/lm/turtle/turtle.ctl
 
 # the transcripts, one per line, to be used for the alignment
-TACTLFN=@prefix@/share/sphinx2/model/lm/turtle/demo.cor
+TACTLFN=@prefix@/share/sphinx2/model/lm/turtle/turtle.cor
 
-$S2BATCH -adcin TRUE -adcext 16k -ctlfn ${CTLFILE} -tactlfn ${TACTLFN} -ctloffset 0 -ctlcount 100000000 -datadir ${TASK} -agcmax FALSE -langwt 6.5 -fwdflatlw 8.5 -rescorelw 9.5 -ugwt 0.5 -fillpen 1e-10 -silpen 0.005 -inspen 0.65 -top 1 -topsenfrm 3 -topsenthresh -70000 -beam 2e-06 -npbeam 2e-06 -lpbeam 2e-05 -lponlybeam 0.0005 -nwbeam 0.0005 -fwdflat FALSE -fwdflatbeam 1e-08 -fwdflatnwbeam 0.0003 -bestpath TRUE -kbdumpdir ${TASK} -dictfn ${TASK}/demo.dic -noisedict ${HMM}/noisedict -phnfn ${HMM}/phone -mapfn ${HMM}/map -hmmdir ${HMM} -hmmdirlist ${HMM} -8bsen TRUE -sendumpfn ${HMM}/sendump -cbdir ${HMM}
+# the dictionary
+DICT=@prefix@/share/sphinx2/model/lm/turtle.dic
 
+$S2BATCH -adcin TRUE -adcext 16k -ctlfn ${CTLFILE} -tactlfn ${TACTLFN} -ctloffset 0 -ctlcount 100000000 -datadir ${TASK} -agcmax FALSE -langwt 6.5 -fwdflatlw 8.5 -rescorelw 9.5 -ugwt 0.5 -fillpen 1e-10 -silpen 0.005 -inspen 0.65 -top 1 -topsenfrm 3 -topsenthresh -70000 -beam 2e-06 -npbeam 2e-06 -lpbeam 2e-05 -lponlybeam 0.0005 -nwbeam 0.0005 -fwdflat FALSE -fwdflatbeam 1e-08 -fwdflatnwbeam 0.0003 -bestpath TRUE -kbdumpdir ${TASK} -dictfn ${DICT} -noisedict ${HMM}/noisedict -phnfn ${HMM}/phone -mapfn ${HMM}/map -hmmdir ${HMM} -hmmdirlist ${HMM} -8bsen TRUE -sendumpfn ${HMM}/sendump -cbdir ${HMM}
 
